# agentic-chat

./: .env.example  .gitignore  README.md  best-aproaches-to-create-an-agentic-ai-based-on-lo.md  docker-compose.yml  implementation-plan.md
.claude/: styles.txt  z-image-system-prompt.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/agent/: graph.py  prompts.py
backend/app/agent/tools/: _dedup.py  history_save.py  history_search.py  reference_search.py  style_search.py  web_search.py
backend/app/ingest/: chunking.py  ingest_reference.py  ingest_styles.py
backend/app/memory/: chroma_client.py  hashing.py  image_store.py
data/reference/: artist-photographer-styles.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/prompt-history/: page.tsx
frontend/components/: ActionsPane.tsx  ChatMessage.tsx  CommandAutocomplete.tsx  ConsistencyBlock.tsx  LoraPane.tsx  PromptBlock.tsx  ToolCallDisplay.tsx
frontend/lib/: backend-chat-transport.ts  commands.ts  lora-config.ts  parse-prompt-blocks.ts  target-mode.ts  thread-id.ts
imagegen/: Dockerfile  requirements.txt
imagegen/app/: main.py  pipeline.py  smoke_test.py
searxng/: settings.yml
