[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-chat-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-text-splitters>=0.3",
    "chromadb>=0.5",
    "aiosqlite>=0.20",
    "docker>=7.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
